cmd/webserver/assets/sass/_home.scss
#home-page {

    #hero {
        margin-top: 140px;
        margin-bottom: 140px;
        position: relative;
        pointer-events: none;

        h1 {
            color: #28a745;
            font-family: 'Audiowide', sans-serif;
            text-align: center;
            text-shadow: 0 0 10px #1b2738, 0 0 10px #1b2738;
            font-size: 5rem;
            margin: 0;
        }
    }

    #panels {
        > a {
            color: #212529;

            .card {
                //background-color: #28a745;
            }
        }
    }

    #players {
        #column {
            text-transform: capitalize;
        }
    }

    #prices {
        .text-truncate {
            width: 300px;
        }
    }

    #news {

        .media {
            display: block;

            img {
                width: 100%;
                height: auto;
            }

            .media-body {
                overflow: auto;
            }
        }

        @include media-breakpoint-up(sm) {
            .media {
                display: flex;

                img {
                    width: 150px;
                    min-width: 150px;
                    height: 70px;
                }
            }
        }
    }

    #new-releases {
        .row {

            img {
                border-bottom: solid #fff;
                border-width: 1px;
                width: 100%;
            }

            @include media-breakpoint-up(sm) {
                img {
                    border-width: 0;
                }
            }
            @include media-breakpoint-up(lg) {
                img {
                    border-width: 1px;
                }
            }
        }
    }
}

